--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,14 @@ dependencies:
   flutter_document_scanner: ^1.1.2
   image_cropper: ^10.0.0+1
   flutter_doc_scanner: ^0.0.16
+  dropdown_search: ^6.0.2
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+
 
 flutter:
   uses-material-design: true
