--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   image_cropper: ^10.0.0+1
   flutter_doc_scanner: ^0.0.16
   dropdown_search: ^6.0.2
+  socket_io_client: ^3.1.2
 
 
 dev_dependencies:
