--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   flutter_doc_scanner: ^0.0.16
   dropdown_search: ^6.0.2
   socket_io_client: ^3.1.2
-
+  flutter_fortune_wheel: ^1.3.2
 
 dev_dependencies:
   flutter_test:
