--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,11 @@ dependencies:
   logger: ^2.5.0
   flutter_document_scanner: ^1.1.2
   image_cropper: ^10.0.0+1
-  flutter_doc_scanner: ^0.0.16
+  flutter_doc_scanner: ^0.0.17
   dropdown_search: ^6.0.2
   socket_io_client: ^3.1.2
   flutter_fortune_wheel: ^1.3.2
+  google_mlkit_document_scanner: ^0.4.0
 
 dev_dependencies:
   flutter_test:
