--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   socket_io_client: ^3.1.2
   flutter_fortune_wheel: ^1.3.2
   google_mlkit_document_scanner: ^0.4.0
+  firebase_messaging: ^16.0.4
+  flutter_local_notifications: ^19.5.0
+  firebase_core: ^4.2.1
+  firebase_auth: ^6.1.3
+  google_sign_in: ^7.2.0
+  sign_in_with_apple: ^7.0.1
 
 dev_dependencies:
   flutter_test:
